--- a/views/update-bio.handlebars
+++ b/views/update-bio.handlebars
@@ -8,7 +8,7 @@
             <input type="hidden" id="user-id" name="user-id" value={{user.id}} />
         </div>
         <div class="panel-body">
-            <h4>About Me</h4>
+            <h4>All About Me</h4>
             <form class="bio-form">
                 <div class="form-group">
                     <label for="user-signup"></label>
